--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ buildscript {
     }
     dependencies {
         classpath deps.android_gradle_plugin
-        
+
+        classpath 'com.antfortune.freeline:gradle:0.8.8'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
