--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,8 +78,14 @@ dependencies {
     implementation deps.timber
 
     //ARouter
-    implementation 'com.alibaba:arouter-api:1.3.1'
-    annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
+    implementation deps.arouter.api
+    annotationProcessor deps.arouter.compiler
+
+    //天眼监测
+    implementation deps.godeye.core
+    debugImplementation deps.godeye.monitor
+    releaseImplementation deps.godeye.monitor_no_op
+    implementation deps.godeye.toolbox
 
 
 }
