--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    apply from: 'versions.gradle'
+    apply from: 'https://raw.githubusercontent.com/xuexiangjys/XUtil/master/versions.gradle'
+
     addRepos(repositories)
-    repositories {
-        google()
-        jcenter()
-    }
+//    repositories {
+//        google()
+//        jcenter()
+//    }
     dependencies {
         classpath deps.android_gradle_plugin
 
-        classpath 'com.antfortune.freeline:gradle:0.8.8'
+        classpath deps.freeline_gradle_plugin
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,10 +20,10 @@ buildscript {
 
 allprojects {
     addRepos(repositories)
-    repositories {
-        google()
-        jcenter()
-    }
+//    repositories {
+//        google()
+//        jcenter()
+//    }
 }
 
 task clean(type: Delete) {
